# EngineDX12

./: CMakeLists.txt  CMakePresets.json  Engine.sln  LICENSE  LICENSE.txt  README.md
Engine/: .gitignore  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/Assets/Shaders/: Pipeline.hlsli  PixelShader.hlsl  VertexShader.hlsl
Engine/Docs/Diagrams/: .$SystemsRelations.drawio.bkp  .$SystemsRelations.drawio.dtmp  SystemsRelations.drawio
Engine/Docs/Plans/: Plan to create GCS.md
Engine/Include/Core/DX12/: CommandQueue.h  CommandQueue.hpp  DXContext.h  DXContext.hpp
Engine/Include/Core/Diagnostics/: ErrorHandler.h  ErrorHandler.hpp  Logger.h  Logger.hpp
Engine/Include/Core/Interfaces/: IComponent.h  IComponentData.hpp  IGC.h  IGC.hpp  IGameObject.hpp  IMalloc.h  ISystem.hpp
Engine/Include/Core/Memory/: MemoryArena.h  STLAllocator.h  STLAllocator.hpp  TrackingAllocator.h  TrackingAllocator.hpp
Engine/Include/Core/Memory/HazardManager/: HazardManager.h  HazardManager.hpp  HazardPointer.h
Engine/Include/Core/Memory/LLM/: LLMScopeTracker.h  LLMScopeTracker.hpp  LLMStructs.h  LLMTracker.h  LLMTracker.hpp
Engine/Include/Core/Memory/Ptr/: GuardPtr.h  GuardPtr.hpp
Engine/Include/Core/Resources/: Container.h  Container.hpp
Engine/Include/Core/Resources/Components/: MeshComponent.h  MeshComponent.hpp
Engine/Include/Core/Resources/ResourceManagers/: MeshManager.h  TextureManager.hpp  UploadManager.h  UploadManager.hpp
Engine/Include/Core/Resources/buffers/: BaseGPUBuffer.h  BaseGPUBuffer.hpp  RingGPUBuffer.hpp  StaticGPUBuffer.h  StaticGPUBuffer.hpp
Engine/Include/Core/Systems/: ObjectGCSystem.h  ObjectGCSystem.hpp  ResourceManagmentSystem.hpp  SystemManager.hpp
Engine/Include/Core/Systems/ECS/: ComponentData.h  ComponentData.hpp  ComponentManager.h  ComponentManager.hpp  ECSystem.h  ECSystem.hpp  EntityManager.h  EntityManager.hpp
Engine/Include/Core/Systems/Game/: GameEngine.h
Engine/Include/Core/Systems/MemoryManagmentSystem/: MemoryManager.h  MemoryManager.hpp  MemoryManagmentSystem.h  MemoryManagmentSystem.hpp
Engine/Include/Core/Systems/ThreadingSystem/: ThreadingSystem.h  ThreadingSystem.hpp
Engine/Include/Core/Systems/Time/: FixedTickSystem.h  FixedTickSystem.hpp  FrameTickSystem.h  FrameTickSystem.hpp  TimeSystem.h  TimeSystem.hpp
Engine/Include/Core/Window/: Window.h  Window.hpp
Engine/Include/Engine/Core/DX12/: CommandQueue.h  DXContext.h
Engine/Include/Engine/Core/Diagnostics/: ErrorHandler.h  Logger.h
Engine/Include/Engine/Core/Interfaces/: BaseGarbageObject.h  BaseIterator.h  BaseObject.h  BaseUnknown.h  CoreObject.h  IAllocator.h  IComponent.h  IComponentData.h  IGC.h  IGameObject.h  IMalloc.h  ISystem.h
Engine/Include/Engine/Core/Memory/: Allocator.h  DefaultAllocator.h  GMalloc.h  Memory.h  MemoryArena.h  MemoryManager.h  MemoryPool.h  SRLAllocator.h  STLAllocator.h  TrackingAllocator.h
Engine/Include/Engine/Core/Renderer/: Renderer.h
Engine/Include/Engine/Core/Resources/: Container.h
Engine/Include/Engine/Core/Systems/: ECSystem.h  GCSystem.h  MemoryManagmentSystem.h  ObjectGCSystem.h  ResourceManagmentSystem.h  SystemManager.h  ThreadingSystem.h
Engine/Include/Engine/Core/Threading/: thread.h
Engine/Include/Engine/Core/Window/: Window.h
Engine/Include/Engine/Graphics/DebugLayer/: DXDebugLayer.h
Engine/Include/Engine/Graphics/Systems/: UploadSystem.h
Engine/Include/Engine/Math/Matrix/: Matrix.h  MatrixFactory.h
Engine/Include/Engine/Utils/: Container.h  RawContainer.h  WinInclude.h
Engine/Include/Graphics/DebugLayer/: DXDebugLayer.h  DXDebugLayer.hpp
Engine/Include/Graphics/Systems/: UploadSystem.h  UploadSystem.hpp
Engine/Include/Math/Matrix/: Matrix.h  Matrix.hpp  MatrixFactory.h  MatrixFactory.hpp
Engine/Include/Utils/: WinInclude.h  WinInclude.hpp
Engine/Include/Utils/Classes/: List.h  List.hpp
Engine/Source/: CMakeLists.txt  Engine.cpp
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/DX12/: CommandQueue.cpp  DXContext.cpp
Engine/Source/Core/Diagnostics/: ErrorHandler.cpp  Logger.cpp
Engine/Source/Core/Interfaces/: BaseObject.cpp
Engine/Source/Core/Memory/: TrackingAllocator.cpp
Engine/Source/Core/Memory/HazardManager/: HazardManager.cpp
Engine/Source/Core/Memory/LLM/: LLMScopeTracker.cpp  LLMStructs.cpp  LLMTracker.cpp
Engine/Source/Core/Resources/buffers/: BaseGPUBuffer.cpp
Engine/Source/Core/Systems/: ObjectGCSystem.cpp
Engine/Source/Core/Systems/ECS/: ECSystem.cpp  EntityManager.cpp
Engine/Source/Core/Systems/MemoryManagmentSystem/: MemoryManagmentSystem.cpp
Engine/Source/Core/Systems/ThreadingSystem/: ThreadingSystem.cpp
Engine/Source/Core/Systems/Time/: FixedTickSystem.cpp  FrameTickSystem.cpp  TimeSystem.cpp
Engine/Source/Core/Window/: Window.cpp
Engine/Source/Graphics/: CMakeLists.txt
Engine/Source/Graphics/DebugLayer/: DXDebugLayer.cpp
Engine/Source/Input/: CMakeLists.txt
Engine/Source/Math/: CMakeLists.txt
Engine/Source/Math/Matrix/: Matrix.cpp  MatrixFactory.cpp
Engine/Source/Physics/: CMakeLists.txt
Engine/Source/Utils/: CMakeLists.txt
Engine/Tests/: CMakeLists.txt
Engine/Tests/CoreTests/: CMakeLists.txt  test.cpp
Engine/Tests/CoreTests/Include/Diagnostic/: LoggerTest.h  LoggerTest.hpp
Engine/Tests/CoreTests/Include/Memory/: GMallocTest.h  GMallocTest.hpp
Engine/Tests/CoreTests/Include/Utils/: ListTest.h  ListTest.hpp
Engine/Tests/CoreTests/Memory/: GMallocTest.h
Engine/Tests/CoreTests/Systems/ECS/: ECSStressTest.h  PositionComponent.h  dataComponent.h  nameComponent.h  sumComponent.h
Engine/src/: Engine.cpp
Engine/src/Engine/Core/: CMakeLists.txt
Engine/src/Engine/Core/DX12/: CommandQueue.cpp  DXContext.cpp
Engine/src/Engine/Core/Diagnostics/: ErrorHandler.cpp  Logger.cpp
Engine/src/Engine/Core/Interfaces/: BaseObject.cpp
Engine/src/Engine/Core/Memory/: GMalloc.cpp  TrackingAllocator.cpp
Engine/src/Engine/Graphics/: CMakeLists.txt
Engine/src/Engine/Input/: CMakeLists.txt
Engine/src/Engine/Math/: CMakeLists.txt
Engine/src/Engine/Physics/: CMakeLists.txt
Engine/src/Engine/Utils/: CMakeLists.txt
(+98 files in other folders)
